z-index problem with navigation fixed

--- a/src/components/storeFinder/StoreInformation/StoreInformation.module.css
+++ b/src/components/storeFinder/StoreInformation/StoreInformation.module.css
@@ -60,6 +60,8 @@
   flex-direction: column;
   align-items: end;
   justify-content: center;
+
+  z-index: -1;
 }
 
 .phoneContainer {
